--- a/YuePlayer/android/build.gradle
+++ b/YuePlayer/android/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'com.android.application'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    //compile 'com.android.support:support-v4:19.1.+'
+    //compile 'com.android.support:appcompat-v7:19.1.+'
 }
 
 android {
