update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ tests/quickandroidactivitytests/tests/bin/*
 tests/quickandroidactivitytests/tests/gen/*
 
 #Android
+*.properties~
 local.properties
 gradle.properties
 .build
@@ -44,3 +45,5 @@ vendor
 tests/instrument/build
 build
 *.swp
+
+
