--- a/YueWidgetTest/android/build.gradle
+++ b/YueWidgetTest/android/build.gradle
@@ -56,4 +56,8 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
+
 }
